gnome-shell-extension-quiet-shortcuts (1) lernstick-12; urgency=medium

  * Initial release

 -- Thore Sommer <mail@thson.de>  Tue, 12 Sep 2023 14:38:49 +0300