@@ -2,6 +2,6 @@
 "name": "Quiet Shortcuts",
 "description": "Disable the shortcut inhibitor dialog",
 "uuid": "quiet-shortcuts@lernstick.ch",
-"shell-version": ["43", "44", "45"],
+"shell-version": ["45", "46"],
 "url": "https://github.com/Lernstick/gnome-shell-extension-quiet-shortcuts"
 }
